[package]
name = "rings-derive"
description = "Helper macros for rings node implementation."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
core_crate = []
default = [
]
wasm = [
    "wasm-bindgen-macro-support",
]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.27"
wasm-bindgen-macro-support = { workspace = true, optional = true }
