[package]
name = "rings-snark"
description = "IVC SNARK implementation of Rings Network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# https://github.com/microsoft/Nova
nova-snark = "0.32"

ff = { version = "0.13", features = ["derive"] }

# ref: https://electriccoin.co/blog/the-pasta-curves-for-halo-2-and-beyond/
circom-scotia = { git = "https://github.com/RingsNetwork/circom-scotia", rev = "d453cc8cf55e62712762282b2c531b7a02787190", features = ["circom-2"] }
pasta_curves = "0.5"
# We wrapped cicrom as binary
circom = { git = "https://github.com/RingsNetwork/circom", rev = "ea8c4cd987f035ef4f08e17269d9b68cb5ab9122", version = "2.1.7" }
# Required for avoiding error from circom/parser
lalrpop = { version = "0.19.9", features = ["lexer"] }
log = { version = "0.4", features = ["std"] }

# for load r1cs
byteorder = "1.4.3"
crypto-bigint = { version = "0.5.2", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.70"
thiserror = "1"

bellpepper-core = "0.4.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
# only for unitest
tokio = { version = "1.13.0", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = "4.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "4.0.0", features = ["std", "js"], default-features = false }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "crates/snark/docs/katex.html",
]

[[bin]]
name = "circom"
path = "bin/circom.rs"
