[package]
name = "rings-snark"
description = "IVC SNARK implementation of Rings Network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# https://github.com/microsoft/Nova
nova-snark = { git = "https://github.com/RingsNetwork/nova", version = "0.33", rev = "ea333243b57f3ae794f1d8f6ff00f89adc94bfac" }

ff = { version = "0.13", features = ["derive"] }

# for calculate witness
fnv = "1.0.7"

# ref: https://electriccoin.co/blog/the-pasta-curves-for-halo-2-and-beyond/
cfg-if = "1.0.0"
lalrpop = { version = "0.19.9", features = ["lexer"] }
log = { version = "0.4", features = ["std"] }
pasta_curves = "0.5"

# for load r1cs
byteorder = "1.4.3"
crypto-bigint = { version = "0.5.2", features = ["serde"] }
itertools = "0.9.0"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.70"
thiserror = "1"

bellpepper-core = "0.4.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

eyre = "0.6.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = "4.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "4.0.0", features = ["std", "js"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
memory-stats = "1.0.0"
tokio = { version = "1.13.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-test = { version = "0.3.0" }
