[package]
name = "rings-snark"
description = "IVC SNARK implementation of Rings Network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
llvm = ["wasmer-compiler-llvm"]

[dependencies]
# https://github.com/microsoft/Nova
nova-snark = { git = "https://github.com/RingsNetwork/nova", version = "0.34", rev = "d77b65437575d392977cf85ca556b562bf207203" }

ff = { version = "0.13", features = ["derive"] }

# for calculate witness
fnv = "1.0.7"

# ref: https://electriccoin.co/blog/the-pasta-curves-for-halo-2-and-beyond/
cfg-if = "1.0.0"
lalrpop = { version = "0.19.9", features = ["lexer"] }
log = { version = "0.4", features = ["std"] }
pasta_curves = "0.5"

# for load r1cs
bellman_ce = { git = "https://github.com/matter-labs/bellman", version = "0.3.2" }
bellpepper-core = "0.4.0"
byteorder = "1.4.3"
crypto-bigint = { version = "0.5.2", features = ["serde"] }
itertools = "0.9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.70"
thiserror = "1"

eyre = "0.6.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = "4.2.5"
wasmer-compiler-llvm = { version = "4.1.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "4.2.5", features = ["js-default"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
memory-stats = "1.0.0"
tokio = { version = "1.13.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-test = { version = "0.3.0" }
