[package]
name = "rings-native-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
rings-core = { workspace = true }
rings-node = { workspace = true }
rings-rpc = { workspace = true }
serde_json = "1.0.70"
tokio = { version = "1.13.0", features = ["full"] }
