[package]
name = "rings-snark-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rings-snark = { workspace = true }
async-trait = { workspace = true }
rings-core = { workspace = true }
rings-node = { workspace = true }
rings-rpc = { workspace = true }
tokio = { version = "1.13.0", features = ["full"] }

[[example]]
name = "rings-bn256-example"
path = "bn256.rs"
bench = false
